Tue Jan  8 05:47:14 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * cuts/CCM_CoWorkEr_Proxy_T.cpp:
        * cuts/Event_Handler_Manager_T.h:
        * cuts/Event_Handler_Manager_T.inl:
        
          Fixed build errors on non-Windows systems related to improper
          use of the keyword 'typename' for variable declarations.

Tue Jan  8 03:52:57 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:

          Bug fix that was causing an error to return when inserting
          a baseline metric for the first time. It seems as if the
          record was still be inserted, but an error was returning.
          Now, no error is returned. :)

Tue Jan  8 03:39:46 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:

          Bug fix that was preventing baseline metrics from updating
          if it already existed.

Tue Jan  8 02:14:09 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:

          Reverted the change below and creating a new stored procedure
          for setting the default baseline metrics.

Mon Jan  7 23:25:24 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/SQL/CUTS-baseline.sql:

          The host column is allowed to contain a NULL value. This
          signifies that the host is unknown, and the current baseline
          is the default metric.

Mon Jan  7 19:28:10 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * tests/cuts/Boost_JUnit_Formatter.h:
        * tests/cuts/Boost_JUnit_Formatter.cpp:
        * tests/cuts/Port_Measurement_Test.cpp:
        * tests/cuts/Test_Log.h:
        * tests/cuts/Time_Measurement_Test.cpp:
        * tests/cuts/Timestamp_Metric_Test.cpp:
        * tests/cuts/workers/CPU_Worker_Test.cpp:

          Added package information to all the unit test suites.

Sun Jan  6 00:02:13 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
